# proxy-vulkan

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_osx.sh
cmake-modules/: CustomLinkLibraries.cmake
proxy-protos/: CMakeLists.txt
proxy-protos/protos/: function.capnp  instance.capnp  result.capnp
proxy-vulkan/: CMakeLists.txt
proxy-vulkan-server/: CMakeLists.txt
proxy-vulkan-server/src/: main.c  main.cpp
proxy-vulkan/include/proxy-vulkan/: globals.h  instance.h  lib_main.h  proto_utils.h  proxy_functions.h  proxy_headers.h  proxy_results.h
proxy-vulkan/src/: instance.c  instance.cpp  lib_main.c  lib_main.cpp
samples/: CMakeLists.txt
samples/create-instance/: CMakeLists.txt  main.cpp
